--- a/templates/werewolf_home.html
+++ b/templates/werewolf_home.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>test test</title>
-</head>
-<body>
-<h1>test me, oh not what yes yes about now</h1>
-</body>
-</html>
+<html lang="en">
 
-<!-- browser-sync start --server --directory --files "*" -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <title>Werewolf Home Page</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/werewolf_home.css">
+</head>
+
+<body>
+    <h1>Positioning Elements</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4" align="center">p1</div>
+            <div class="col-md-4" align="center">p2</div>
+            <div class="col-md-4" align="center">p3</div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
+</body>
+
+</html>
