--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,5 +2,22 @@
 * @Author: Lucien Zhang
 * @Date:   2019-09-20 13:33:36
 * @Last Modified by:   Lucien Zhang
-* @Last Modified time: 2019-09-20 22:56:49
+* @Last Modified time: 2019-09-21 14:23:28
 */
+main>.container {
+    padding: 60px 15px 0;
+}
+
+.footer {
+    background-color: #f5f5f5;
+}
+
+.footer>.container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+code {
+    font-size: 80%;
+}
+
