add werewolf homepage

--- a/app/static/css/werewolf_home.css
+++ b/app/static/css/werewolf_home.css
@@ -2,7 +2,7 @@
 * @Author: Lucien Zhang
 * @Date:   2019-09-19 16:49:13
 * @Last Modified by:   Lucien Zhang
-* @Last Modified time: 2019-09-19 17:00:41
+* @Last Modified time: 2019-09-28 17:21:38
 */
 
 body {
@@ -10,5 +10,51 @@ body {
     background-size: cover;
     background-attachment: fixed;
 
+    color: white;
+}
+
+.button-holder{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+button {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.row1{
+    margin-top: 10%;
+}
+
+.row1 button{
+    height: 100px;
+    font-size: 20px;
+}
+
+#setup {
+    background-color: #4FA746;
+    color: white;
+}
+
+#enter {
+    background-color: #427BFF;
+    color: white;
+}
+
+#goback {
+    background-color: #F2C010;
+    color: black;
+}
+
+.row2{
+    margin-top: 50px;
+}
+
+.row2 button{
+    background-color: #50A3B9;
     color: white;
 }
