--- a/app/templates/werewolf_home.html
+++ b/app/templates/werewolf_home.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-    <title>Werewolf Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <title>狼人杀</title>
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../static/css/werewolf_home.css">
 </head>
 
 <body>
-    <h1>Positioning Elements</h1>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4" align="center">p1</div>
-            <div class="col-md-4" align="center">p2</div>
-            <div class="col-md-4" align="center">p3</div>
+        <div class="row row1">
+            <div class="col-lg-4 col-md-6 col-sm-6 col-6 text-center">
+                <div class="button-holder">
+                    <button id="setup" type="button" class="btn">创建房间</button>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-6 text-center">
+                <div class="button-holder">
+                    <button id="enter" type="button" class="btn">进入房间</button>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 col-sm-12 col-12 text-center">
+                <div class="button-holder">
+                    <button id="goback" type="button" class="btn">一键返回上局房间</button>
+                </div>
+            </div>
+        </div>
+        <div class="row row2">
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="button-holder">
+                    <button type="button" class="btn">角色及规则介绍</button>
+                </div>
+            </div>
+<!--             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="button-holder">
+                    <button type="button" class="btn">捐助</button>
+                </div>
+            </div> -->
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="button-holder">
+                    <button type="button" class="btn">意见反馈</button>
+                </div>
+            </div>
         </div>
     </div>
-
     <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-    <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
+    <script type="text/javascript" src="../static/js/werewolf_home.js"></script>
 </body>
 
 </html>
