--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
         <!-- Fixed navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="/">
-                <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="100" height="50" alt="Main Logo">
+                <img src="{{ url_for('static', filename='images/small-logo.png') }}" width="100" height="50" alt="Main Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
