--- a/app/templates/werewolf_game.html
+++ b/app/templates/werewolf_game.html
@@ -21,6 +21,7 @@
         </div>
 
     </div>
+    {{ dbtxt }}
     <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../static/js/ajax-utils.js"></script>
