link game and game table, done json, done turn

--- a/app/templates/werewolf_game.html
+++ b/app/templates/werewolf_game.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>狼人杀房间：{{gid}}</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/werewolf_game.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/werewolf_game.css') }}">
 </head>
 
 <body>
@@ -19,13 +19,19 @@
                 </div>
             </div>
         </div>
-
     </div>
     {{ dbtxt }}
-    <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../static/js/ajax-utils.js"></script>
-    <script type="text/javascript" src="../static/js/werewolf_game.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
+    <!-- <script type="text/javascript" src="../static/js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript" src="../static/js/ajax-utils.js"></script> -->
+    <script type="text/javascript" src="{{ url_for('static', filename='js/werewolf_game.js') }}"></script>
+    {% if ishost %}
+    <audio id="back_audio">
+        <source src="{{ url_for('static', filename='audio/night_bgm.mp3') }}" type="audio/mpeg">
+    </audio>
+    <audio id="step_audio"></audio>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/get_audio.js') }}"></script>
+    {% endif %}
 </body>
 
 </html>
