--- a/app/static/css/werewolf_game.css
+++ b/app/static/css/werewolf_game.css
@@ -2,5 +2,10 @@
 * @Author: Lucien Zhang
 * @Date:   2019-10-04 18:44:09
 * @Last Modified by:   Lucien Zhang
-* @Last Modified time: 2019-10-04 18:44:09
+* @Last Modified time: 2019-10-04 19:40:29
 */
+
+body {
+    overscroll-behavior-y: contain;
+    overscroll-behavior-x: none;
+}
