--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,8 +27,7 @@
     <div class="form-group">
         <label>用户名</label>
         <input id="username" name="username" type="text" class="form-control" placeholder="" required="required">
-        <!-- <small class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-    </div> <!-- form-group end.// -->
+    </div>
 
     <div class="form-group">
         <label>密码</label>
@@ -37,6 +36,10 @@
     <div class="form-group">
         <label>确认密码</label>
         <input id="confirm" class="form-control" type="password" required="required">
+    </div>
+    <div class="form-group">
+        <label>游戏名称</label>
+        <input id="name" name="name" type="text" class="form-control" placeholder="" required="required">
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> 注册  </button>
