--- a/app/templates/werewolf_home.html
+++ b/app/templates/werewolf_home.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 text-center">
                 <div class="button-holder">
-                    <button id="enter" type="button" class="btn">进入房间</button>
+                    <button id="join" type="button" class="btn">进入房间</button>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-sm-12 col-12 text-center">
