--- a/app/templates/werewolf_game.html
+++ b/app/templates/werewolf_game.html
@@ -5,24 +5,170 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <title>狼人杀房间：{{gid}}</title>
+    <title>狼人杀房间</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/werewolf_game.css') }}">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row row1">
-            <div class="col-lg-4 col-md-6 col-sm-6 col-6 text-center">
-                <div class="button-holder">
-                    <button id="setup" type="button" class="btn">创建房间</button>
+    <div class="container">
+        <div class="logo"><img src="{{ url_for('static',filename='images/werewolf/logo.png') }}" alt="Logo"></div>
+        <div class="navbar">
+            <span id="current_user">{{ name }}</span>
+            <div class="float-right">
+                <a href="{{ url_for('werewolf_api.home') }}">
+                    退出
+                </a>
+            </div>
+        </div>
+        <div id="gid">房间号：{{ gid }}</div>
+        <div class="progress">
+            <div class="progress-bar progress-bar-info" role="progressbar" style="width: 130%;"></div>
+        </div>
+        <div id="info" class="area">
+            <div class="notice">
+                <div class="status" style="display: inline-block;">
+                    第1天 白天讨论
+                </div>
+                <div class="setting float-right">
+                    <button data-toggle="modal" data-target="#history" class="btn btn-primary btn-xs">历史信息</button>
+                    <button data-toggle="modal" data-target="#check-setting" class="btn btn-primary btn-xs">查看配置</button>
+                </div>
+            </div>
+            <div class="ope-player">
+                <button data-toggle="modal" data-target="#check-role-dialog" class="btn btn-warning">查看身份</button>
+                <button class="btn btn-warning float-right">使用技能</button>
+            </div>
+        </div>
+        <div id="ope-panel">
+            <div class="area tip-panel">
+                <div class="tips">test tips</div>
+                <div class="panel-buttons"><button>test1</button><button>test2</button></div>
+            </div>
+            <div class="area player-panel">
+                <div id="all_players">
+                    {% for i in range(1, seat_cnt + 1) %}
+                    {% if i is odd %}
+                    <div class="player">
+                        <button pos="{{ i }}" class="btn">{{i}}号</button>
+                        <span></span>
+                    </div>
+                    {% else %}
+                    <div class="player player-right-side">
+                        <span></span>
+                        <button pos="{{ i }}" class="btn">{{i}}号</button>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                    <!-- <div class="player">
+                        <a href="#" pos="1" status="alive" class="btn">1号</a>
+                        <span>1</span>
+                    </div>
+                    <div class="player player-right-side">
+                        <span>IE</span>
+                         <a href="#" pos="3" status="alive" class="btn">3号</a>
+                    </div>
+                    <div class="player">
+                        <a href="#" pos="2" status="alive" class="btn">2号</a>
+                        <span>2</span>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" id="check-setting" tabindex="-1" role="dialog" aria-labelledby="checkSettingLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="checkSettingLabel">当前配置</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {% for row in current_setting %}
+                    <p>{{ row }}</p>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">好的</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="history" tabindex="-1" role="dialog" aria-labelledby="historyLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="historyLabel">历史信息</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div id="history-model-content" class="modal-body">
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>nothing yet</p>
+                    <p>yes!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">好的</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="check-role-dialog" tabindex="-1" role="dialog" aria-labelledby="checkRolLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="checkRolLabel">游戏身份</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        你的身份是：{{ role_name }}
+                    </p>
+                    {% if role_type!='unknown' %}
+                    <div class="role-img">
+                        <img src="{{ url_for('static', filename='images/werewolf/cards/' + role_type + '.jpg') }}" alt="{{ role_name }}" width="274" height="389">
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">好的</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button data-toggle="modal" data-target="#nothing" class="btn btn-warning">发起投票</button>
+    <button class="btn btn-warning">入夜</button>
+
+
     {{ dbtxt }}
+
+
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <!-- <script type="text/javascript" src="../static/js/bootstrap.min.js"></script> -->
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <!-- <script type="text/javascript" src="../static/js/ajax-utils.js"></script> -->
     <script type="text/javascript" src="{{ url_for('static', filename='js/werewolf_game.js') }}"></script>
     {% if ishost %}
