--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'nav_foot.html' %}
 
 {% block head %}
-    <meta name="description" content="Lucien Home Page">
-    <title>Lucien's Home Page</title>
+    <meta name="description" content="ZHANG Home Page">
+    <title>ZHANG Home Page</title>
     <link rel="canonical" href="http://lucien.red">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 
