--- a/website/static/css/nav_foot.css
+++ b/website/static/css/nav_foot.css
@@ -5,11 +5,8 @@
 * @Last Modified time: 2019-09-21 14:23:28
 */
 
-.container{
-    margin-left: 0;
-}
 
-main>.container {
+main > .container {
     padding: 60px 15px 0;
 }
 
@@ -17,7 +14,7 @@ main>.container {
     background-color: #f5f5f5;
 }
 
-.footer>.container {
+.footer > .container {
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -27,20 +24,20 @@ code {
 }
 
 
-.dropdown-submenu {
-  position: relative;
+.nav_foot .dropdown-submenu {
+    position: relative;
 }
 
-.dropdown-submenu a::after {
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 6px;
-  top: .8em;
+.nav_foot .dropdown-submenu a::after {
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 6px;
+    top: .8em;
 }
 
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
+.nav_foot .dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-left: .1rem;
+    margin-right: .1rem;
 }
