--- a/website/templates/nav_foot.html
+++ b/website/templates/nav_foot.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-<header>
+<header class="nav_foot">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="/">
@@ -129,7 +129,7 @@
 </main>
 
 
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-3 nav_foot">
     <div class="container">
         <div class="row border-bottom">
             <div class="col-md-6 mb-3 mb-md-0">
