--- a/website/templates/nav_foot.html
+++ b/website/templates/nav_foot.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-<header class="nav_foot">
+<header>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="/">
@@ -121,7 +121,7 @@
 </header>
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
-    <div class="container">
+    <div class="container nav-foot-container">
         {% block content %}{% endblock %}
         <!--     <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.</p>
 <p>Back to <a href="/docs/4.3/examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p> -->
@@ -129,8 +129,8 @@
 </main>
 
 
-<footer class="footer mt-auto py-3 nav_foot">
-    <div class="container">
+<footer class="footer mt-auto py-3">
+    <div class="container nav-foot-container">
         <div class="row border-bottom">
             <div class="col-md-6 mb-3 mb-md-0">
                 <h5>Contact Me</h5>
