gfm with misaka

--- a/website/blueprints/ml/ml/static/css/ml.css
+++ b/website/blueprints/ml/ml/static/css/ml.css
@@ -12,6 +12,10 @@
     padding-top: 16px;
 }
 
+#ml-content .sidebar-sticky li a {
+    padding-left: 0;
+}
+
 /*.feather {*/
 /*  width: 16px;*/
 /*  height: 16px;*/
