--- a/website/blueprints/ml/ml/templates/ml.html
+++ b/website/blueprints/ml/ml/templates/ml.html
@@ -4,6 +4,7 @@
     <meta name="description" content="ML Applications">
     <title>Machine Learning Applications</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='css/ml.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='css/gfm.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -16,13 +17,13 @@
                             <span>Image Classification</span>
                         </h6>
                         <ul class="nav flex-column">
-{#                            <li class="nav-item">#}
-{#                                <a class="nav-link active" href="#">#}
-{#                                    Dashboard <span class="sr-only">(current)</span>#}
-{#                                </a>#}
-{#                            </li>#}
+                            {#                            <li class="nav-item">#}
+                            {#                                <a class="nav-link active" href="#">#}
+                            {#                                    Dashboard <span class="sr-only">(current)</span>#}
+                            {#                                </a>#}
+                            {#                            </li>#}
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="{{ url_for('ml_api.project',name='mnist') }}">
                                     Handwritten Digit
                                 </a>
                             </li>
@@ -88,9 +89,11 @@
                 </nav>
 
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 ml-main-content">
-                    {% block ml_content %}
-                        Current Test Things
-                    {% endblock %}
+                    <div class="markdown-body">
+                        {% block ml_content %}
+                            {{ content|markdown }}
+                        {% endblock %}
+                    </div>
                 </main>
             </div>
         </div>
@@ -101,4 +104,5 @@
 
 {% block js %}
     <script type="text/javascript" src="{{ url_for('.static', filename='js/ml.js') }}"></script>
+    {% block project_js %}{% endblock %}
 {% endblock %}
