md with html with footnotes

--- a/website/blueprints/ml/ml/static/css/ml.css
+++ b/website/blueprints/ml/ml/static/css/ml.css
@@ -16,6 +16,10 @@
     padding-left: 0;
 }
 
+.markdown-body {
+    margin-bottom: 50px;
+}
+
 /*.feather {*/
 /*  width: 16px;*/
 /*  height: 16px;*/
