--- a/website/blueprints/ml/ml/templates/project.html
+++ b/website/blueprints/ml/ml/templates/project.html
@@ -1,7 +1,9 @@
 {% extends 'ml.html' %}
 {% block ml_content %}
     <div id="project-name" value="{{ project_name }}"></div>
-    {{ content|markdown }}
+    {% filter markdown %}
+        {% include 'markdowns/'+project_name+'.md' %}
+    {% endfilter %}
 {% endblock %}
 
 {% block project_js %}
