--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,18 +1,16 @@
 {% extends 'nav_foot.html' %}
 
 {% block head %}
-    <meta name="description" content="ZHANG Home Page">
-    <title>ZHANG Home Page</title>
-    <link rel="canonical" href="http://lucien.red">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-
+<meta name="description" content="ZHANG Home Page">
+<title>ZHANG Home Page</title>
+<link rel="canonical" href="http://lucien.red">
+<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}"> -->
 {% endblock %}
-{% block content %}
-    <h1 class="mt-5">index page</h1>
 
+{% block content %}
+<h1 class="mt-5">index page</h1>
 {% endblock %}
 
 {% block js %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
-
+<script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
